--- a/webpage/buyagrade.html
+++ b/webpage/buyagrade.html
@@ -20,12 +20,12 @@
 			<dl>
 				<dt>Name</dt>
 				<dd>
-                	<input type="text" name="name" id="name">
+                	<input type="text" name="name" id="name" required>
 				</dd>
 				
 				<dt>Section</dt>
 				<dd>
-		            <select name="section">
+		            <select name="section" required>
 		                <option value="001">001</option>
 		                <option value="002">002</option>
 		                <option value="003">003</option>
@@ -37,7 +37,7 @@
 				
 				<dt>Credit Card</dt>
 				<dd>
-	                <input type="text" name="credit_card" id="credit_card">
+	                <input type="text" name="credit_card" id="credit_card" required>
 	                <br>
 	                <input type="radio" name="credit_card_type" value="mastercard" checked> MasterCard
                 	<input type="radio" name="credit_card_type" value="visa"> Visa
